fix: spacing

--- a/packages/cashier/src/components/cashier-container/real/real.scss
+++ b/packages/cashier/src/components/cashier-container/real/real.scss
@@ -7,13 +7,13 @@
     &__iframe {
         @include mobile {
             position: absolute;
-            height: calc(100% - 1.6rem);
+            height: calc(100% - 3.2rem);
             inset-inline-end: 0;
             padding: 0 1.6rem;
 
             + .page-container__sidebar--right {
                 position: relative;
-                top: calc(100% + 3.2rem);
+                top: calc(100% + 1.6rem);
                 padding-bottom: 1.6rem;
                 flex: none;
             }
